2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                
   * extconf.rb: Exit with 1 when the package is not found.

2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

   * extconf.rb: Follow mkmf-gnome2.rb position changes.

2003-03-21  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbart_svp.c (vpath_to_svp): Remove the function.

2003-03-19  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/libart2.def: Add a file.

2003-02-19  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart_canvas.c: Work under ruby-1.6.7(or older). 

2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Use ../mkmf-gnome2.rb

2003-02-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart_canvas.c: Change some function names which caused error 
	of  Ruby/GnomeCanvas.
	Fix to work under Ruby-1.6.x.
	* extconf.rb: Fix to work under GNOME-2.2.
	But this changes may be not good solution...

2003-02-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* All files: Update copyright.

2003-01-12  Tom Payne <ruby-gnome-users-en@tompayne.org>

	* sample/testlibart2.rb: Add a file.

2003-01-04  Masao Mutoh  <mutoh@highway.ne.jp>

	* README, COPYING.LIB: Change license term from "the GNU LIBRARY General Public
	License version 2." to "the GNU LESSER GENERAL PUBLIC LICENSE Version 2.1.".

2003-01-04  Tom Payne <ruby-gnome-users-en@tompayne.org>

	* src/rbart_bpath.c, rbart_canvas.c, rbart_svp.c, rbart_vpath.c,
	sample/rose.rb: Add files.
	* src/rbart.[ch]: Modified for above files.

2002-11-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Add file.
	* COPYING, COPYING.LIB: Rename COPYING to COPYING.LIB.

2002-11-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/gnome-canvas.rb: Follow Ruby/GTK2 changes.

2002-10-27  KUBO Takehiro  <kubo@jiubao.org>

	* sample/gnome-canvas.rb: adapt sample to Ruby/GnomeCanvas2.

2002-09-29  KUBO Takehiro  <kubo@jiubao.org>

	* src/rbart.h, src/rbart_affine.c: add prefix to exported functions.