@@ -1,3 +1,7 @@
+2003-08-30  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* extconf.rb: remove nasty hack by using Dir.entries.
+
 2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                 
    * extconf.rb: Exit with 1 when the package is not found.
